<resources>

    <string name="mapbox_access_token">pk.eyJ1Ijoic2FycGl1biIsImEiOiJjazY0em1mMGMweXhpM2tvNDI3N3hzb2V1In0.thHFQTs4iLSzYYY97h3oaw</string>

    <string name="app_name">Sarviun</string>
    <string name="hint_type_to_search">Místo</string>
    <string name="search">Hledat..</string>
    <string name="type_parcela_definicni_bod">Definiční bod parcely</string>
    <string name="type_adresni_misto">Adresní místo</string>
    <string name="type_ulice">Ulice</string>
    <string name="type_zakladni_sidelni_jednotka">Základní sídelní jednotka</string>
    <string name="type_katastralni_uzemi">Katastrální území</string>
    <string name="type_mo_praha">Městský obvod/Městská část ve statutárním městě a hlavním městě Praze</string>
    <string name="type_so_praha">Správní obvod v hlavním městě Praze</string>
    <string name="type_cast_obce">Část obce</string>
    <string name="type_obec">Obec</string>
    <string name="type_obec_po">Obec s pověřeným obecním úřadem</string>
    <string name="type_obec_rp">Obec s rozšířenou působností</string>
    <string name="type_okres">Okres</string>
    <string name="type_vyssi_celek">Vyšší územně samosprávný celek</string>
    <string name="type_unknown">Neznámý typ</string>
    <string name="navigate">Navigovat</string>

    <string name="kod_stavebniho_objektu">Kód stavebního objektu</string>
    <string name="seznam_cisel_domovnich">Seznam čísel domovních</string>
    <string name="identifikacni_parcela">Identifikační parcela</string>
    <string name="typ_stavebniho_objektu">Typ stavebního objektu</string>
    <string name="zpusob_vyuziti">Způsob využití</string>
    <string name="nadrazena_cast_obce">Nadřazená část obce</string>
    <string name="nadrazeny_momc">Nadřazený městský obvod/městská část</string>
    <string name="zacatek_platnosti">Začátek platnosti</string>
    <string name="konec_platnosti">Konec platnosti</string>
    <string name="id_transakce_RUIAN">ID transakce v RÚIAN</string>
    <string name="id_navrhu_zmeny_ISUI">ID návrhu změny v ISÚI</string>
    <string name="id_budovy_ISKN">ID budovy v ISKN</string>
    <string name="datum_dokonceni_stavebniho_objektu">Datum dokončení stavebního objektu</string>
    <string name="druh_svisle_nosne_konstrukce">Druh svislé nosné konstrukce</string>
    <string name="obestaveny_prostor_m3">Obestavěný prostor v m³</string>
    <string name="pocet_bytu">Počet bytů u stavebního objektu s byty</string>
    <string name="pocet_podlazi">Počet nadzemních a podzemních podlaží</string>
    <string name="podlahova_plocha_m2">Podlahová plocha v m²</string>
    <string name="pripojeni_kanalizacni_sit">Připojení na kanalizační síť</string>
    <string name="pripojeni_plyn">Připojení na rozvod plynu</string>
    <string name="pripojeni_vodovod">Připojení na vodovod</string>
    <string name="vytah">Vybavení výtahem</string>
    <string name="zastavena_plocha_m2">Zastavěná plocha v m²</string>
    <string name="zpusob_vytapeni">Způsob vytápění</string>
    <string name="zdroj_geomatrie">Zdroj geometrie</string>
    <string name="shape">Tvar</string>
    <string name="st_area_shape">st_area(shape)</string>
    <string name="st_length_shape">st_length(shape)</string>

    <string name="button_jak_je_toto_mozne">Jak je toto možné?</string>
    <string name="no_RUIAN_item_found">V RÚIAN nebyl nalezen žádný objekt.</string>
    <string name="type_to_search">Zadejte hledané místo, např. Vysočina, Osoblaha, Štefánikova 236,..</string>
    <string name="adresni_misto_mimo_stavebni_objekt">Adresní místo se nenachází uvnitř stavebního objektu. Proto jsou zobrazeny informace o parcele.</string>
    <string name="title_explanation_dialog">Proč nevidím informace o stavbě?</string>
    <string name="vysvetleni_adresa_mimo_objekt">Dle pozorování není adresní místo umístěno vždy v oblasti stavebního objektu, jak je zobrazeno na následujícím příkladu. Adresní místo 2660 značeno červeným bodem se nenachází uvnitř stavebního objektu ohraničeného červenou čarou, proto není možné zatím zjistit informace o objektu.</string>
    <string name="stavebni_objekt">Stavební objekt</string>
    <string name="parcela">Parcela</string>
    <string name="about_stavebni_objekt">Informace o stavebním objektu</string>
    <string name="about_parcela">Informace o parcele</string>
    <string name="jednoznacny_identifikator_parcely">Jednoznačný identifikátor parcely</string>
    <string name="kmenove_parcelni_cislo">Kmenové parcelní číslo</string>
    <string name="poddeleni_cisla_parcely">Poddělení čísla parcely</string>
    <string name="vymera_parcely">Výměra parcely</string>
    <string name="zpusob_vyuziti_pozemku">Způsob využití pozemku</string>
    <string name="rozliseni_druhu_cislovani_parcely">Rozlišení druhu číslování parcely</string>
    <string name="kod_druhu_pozemku">Kód druhu pozemku</string>
    <string name="nadrazene_katastralni_uzemi">Nadřazené katastrální území</string>
    <string name="id_rizeni_iskn">ID řízení v ISKN</string>
    <string name="cislo_parcely">Číslo parcely</string>
    <string name="about_zakladni_sidelni_jednotka">Informace o základní sídelní jednotce</string>
    <string name="kod_zsj">Kód ZSJ</string>
    <string name="nazev_zsj">Název ZSJ</string>
    <string name="vymera_zsj">Výměra zsj v m²</string>
    <string name="charakter_zsj">Převažující charakter využití ZSJ</string>
    <string name="datum_vzniku_prvku">Datum vzniku prvku</string>
    <string name="about_app">O aplikaci</string>
    <string name="about_app_description"><b>Sarviun</b> je našeptávač popisných a lokalizačních údajů o územních prvcích, územně evidenčních jednotkách, účelových prvcích a adresách z Registru územní identifikace, adres a nemovitostí (RÚIAN), který je spravován Českým úřadem zeměměřickým a katastrálním (ČÚZK). Ten garantuje průběžnou aktualizaci záznamů registru přes Informační systém územní identifkace ISÚI (editory jsou správce registru, obce, stavební úřady a ČSÚ).\n\nSarviun dokáže pro parcely a adresní místa zobrazit data o vlastnictví z katastru nemovitostí nebo spustit navigaci k vyhledané adrese. \n\nZa správnost dat neručím, aplikace data neupravuje, pouze zobrazuje. \n\nPracuje se na vylepšení (zobrazení geometrie parcel, vyšších celků). S podněty na rozšíření nebo komerční využití a spolupráci mě neváhejte kontaktovat na sarviun.podpora@gmail.cz</string>
    <string name="zaznam_katastr_nemovitosti">Záznam v Katastru nemovitostí</string>
    <string name="about_katastralni_uzemi">Informace o katastrálním území</string>
    <string name="kod_katastralniho_uzemi">Kód katastrálního území</string>
    <string name="nazev_katastralniho_uzemi">Název katastrálního území</string>
    <string name="digitalni_mapa">Příznak existence digitální mapy</string>
    <string name="nadrazena_obec">Nadřazená obec</string>
    <string name="about_momc">Informace o městském obvodu/městské části ve statutárním městě a hlavním městě Praze</string>
    <string name="kod_momc">Kód MOMC</string>
    <string name="nazev_momc">Název MOMC</string>
    <string name="nadrazeny_mop">Nadřazený MOP</string>
    <string name="spravni_obvod">Správní obvod</string>
    <string name="about_spravni_obvod">Informace o správním obvodu v hlavním městě Praze</string>
    <string name="kod_spravniho_obvodu">Kód správního obvodu</string>
    <string name="nazev_spravniho_obvodu">Název správního obvodu</string>
    <string name="kod_spravni_MOMC">Kód správní MOMC</string>
    <string name="about_cast_obce">Informace o části obce</string>
    <string name="kod_casti_obce">Kód části obce</string>
    <string name="nazev_casti_obce">Název části obce</string>
    <string name="about_obec">Informace o obci</string>
    <string name="kod_obce">Kód obce</string>
    <string name="nazev_obce">Název obce</string>
    <string name="status_obce">Status obce</string>
    <string name="nadrazeny_okres">Nadřazený okres</string>
    <string name="nadrazeny_pou">Nadřazený POU</string>
    <string name="rozsah_cleneni_statut_mesta_momc">Rozsah členění statutárního města na MOMC</string>
    <string name="typ_momc_statut_mesto">Typ MOMC, na něž je statutární město rozčleněno</string>
    <string name="kod_NUTS_LAU">Kód územního celku v NUTS / LAU</string>
    <string name="about_obec_spou">Informace o obci s pověřeným obecním úřadem</string>
    <string name="kod_obce_pou">Kód POU</string>
    <string name="nazev_obce_pou">Název POU</string>
    <string name="kod_spravni_obce">Kód správní obce</string>
    <string name="nadrazena_orp">Nadřazená ORP</string>
    <string name="about_obec_srop">Infomace o obci s rozšířenou působností</string>
    <string name="kod_obce_srop">Kód ORP</string>
    <string name="nazev_obce_srop">Název ORP</string>
    <string name="nadrazeny_vusc">Nadřazený vyšší uzemně samosprávný celek</string>
    <string name="about_okres">Informace o okrese</string>
    <string name="kod_okresu">Kód okresu</string>
    <string name="nazev_okresu">Název okresu</string>
    <string name="nadrazeny_kraj_1960">Nadřazený kraj 1960</string>
    <string name="about_vusc">Informace o vyšším územně samosprávním celku</string>
    <string name="kod_vusc">Kód VÚSC</string>
    <string name="nazev_vusc">Název VÚSC</string>
    <string name="nadrazeny_region_soudrznosti">Nadřazený region soudržnosti</string>


</resources>
